Fixed vertically squashed text. Of note: It seemed problematic to specify font size in px and line-height in em, so I converted several declarations.

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   nowhitespace: afterproperty;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
-  font: 14px/1.6 'Oxygen',sans-serif;
+  font: 1em/1.6em 'Oxygen',sans-serif;
   color: #606060;
 }
 
@@ -226,12 +226,21 @@ h1,h2,h3,h4,h5,h6 {
   clear: both;
 }
 
-h1 { font-size: 32px; }
-h2 { font-size: 26px; }
-h3 { font-size: 20px; }
-h4 { font-size: 18px; }
-h5 { font-size: 16px; }
-h6 { font-size: 14px; }
+h1 {
+  font-size: 2.286em;
+  line-height: 2em;
+}
+h2 {
+  font-size: 1.857em;
+  line-height: 2em;
+}
+h3 {
+  font-size: 1.429em;
+  line-height: 1.8em;
+}
+h4 { font-size: 1.286em; }
+h5 { font-size: 1.143em; }
+h6 { font-size: 1em; }
 
 p {
   margin: 0 0 20px;
